/** @generated AUTO-GENERATED FILE - safe to overwrite */
import * as React from 'react';
import { screen, waitFor } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { renderWithProviders } from '../../../test-utils/renderWithProviders';
import { Card, CardHeader, CardTitle, CardDescription, CardContent, CardFooter } from '../Card';

describe('Card', () => {
  const defaultProps = {
    children: undefined /* TODO */,
  };

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<Card {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<Card {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<Card {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Card {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Card {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<Card {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<Card {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<Card {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('CardHeader', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<CardHeader {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<CardHeader {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<CardHeader {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardHeader {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardHeader {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<CardHeader {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<CardHeader {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardHeader {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('CardTitle', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<CardTitle {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<CardTitle {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<CardTitle {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardTitle {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardTitle {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<CardTitle {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<CardTitle {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardTitle {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('CardDescription', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<CardDescription {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<CardDescription {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<CardDescription {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardDescription {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardDescription {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<CardDescription {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<CardDescription {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardDescription {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('CardContent', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<CardContent {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<CardContent {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<CardContent {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardContent {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardContent {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<CardContent {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<CardContent {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardContent {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});

describe('CardFooter', () => {
  // TODO: Add required props
  const defaultProps = {};

  // ============ Rendering ============
  describe('Rendering', () => {
    it('renders without crashing', () => {
      renderWithProviders(<CardFooter {...defaultProps} />);
    });

    it('renders with default props', () => {
      const { container } = renderWithProviders(<CardFooter {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  // ============ Snapshot ============
  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = renderWithProviders(<CardFooter {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  // ============ Props ============
  describe('Props', () => {
    it('applies custom className', () => {
      // TODO: Implement if component accepts className prop
      expect(true).toBe(true);
    });

    it('handles optional props correctly', () => {
      // TODO: Test optional prop combinations
      expect(true).toBe(true);
    });
  });

  // ============ User Interactions ============
  describe('User Interactions', () => {
    it('handles click events', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardFooter {...defaultProps} />);

      // TODO: Add click interaction tests
      // Example:
      // const button = screen.getByRole("button");
      // await user.click(button);
      // expect(mockHandler).toHaveBeenCalled();
    });

    it('handles input changes', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardFooter {...defaultProps} />);

      // TODO: Add input interaction tests
      // Example:
      // const input = screen.getByRole("textbox");
      // await user.type(input, "test");
      // expect(input).toHaveValue("test");
    });
  });

  // ============ Accessibility ============
  describe('Accessibility', () => {
    it('has no accessibility violations', async () => {
      // TODO: Add axe-core tests if available
      // const { container } = renderWithProviders(<CardFooter {...defaultProps} />);
      // const results = await axe(container);
      // expect(results).toHaveNoViolations();
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderWithProviders(<CardFooter {...defaultProps} />);

      // TODO: Check for proper ARIA labels
      // Example:
      // expect(screen.getByRole("button")).toHaveAttribute("aria-label");
    });

    it('is keyboard navigable', async () => {
      const user = userEvent.setup();
      renderWithProviders(<CardFooter {...defaultProps} />);

      // TODO: Test keyboard navigation
      // Example:
      // await user.tab();
      // expect(screen.getByRole("button")).toHaveFocus();
    });
  });
});
