// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshot matches snapshot 1`] = `
<div
  class="rounded-lg border border-border bg-card text-card-foreground shadow-sm"
/>
`;

exports[`CardContent Snapshot matches snapshot 1`] = `
<div
  class="p-6 pt-0"
/>
`;

exports[`CardDescription Snapshot matches snapshot 1`] = `
<p
  class="text-sm text-muted-foreground"
/>
`;

exports[`CardFooter Snapshot matches snapshot 1`] = `
<div
  class="flex items-center p-6 pt-0"
/>
`;

exports[`CardHeader Snapshot matches snapshot 1`] = `
<div
  class="flex flex-col space-y-1.5 p-6"
/>
`;

exports[`CardTitle Snapshot matches snapshot 1`] = `
<h3
  class="text-xl font-semibold leading-none tracking-tight"
/>
`;
